# asset-tag

./: app.py  index.html  main.py  pyproject.toml  readme.md
templates/: app.html  template.html
