[tool.poetry]
name = "asset-tag"
version = "0.1.0"
description = ""
authors = ["Kiera Saltz <hello@kierasaltz.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
pdfkit = "^1.0.0"
Pillow = "^9.2.0"
treepoem = "^3.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
